fix alignment of top icons on RecipeView

--- a/client/main.scss
+++ b/client/main.scss
@@ -21,7 +21,7 @@ $content-padding: 7px;
 }
 
 .rounded-button {
-  width: auto;
+  width: auto !important;
   border: 2px solid $button-color-main;
   border-radius: 20px;
   color: $button-color-main;
